ユーザエージントによるデザイン切替対応

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/ProjectSettings.json
+/.vs/resapopo.github.io3/config/applicationhost.config
+/.vs/slnx.sqlite
